[package]
name = "lumen-vm"
description = "Lumen stage 3: a stack virtual machine that executes compiled bytecode"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
lumen-common.workspace = true
lumen-lexer.workspace = true
lumen-parser.workspace = true
lumen-compiler.workspace = true
thiserror.workspace = true
